Add SPI jvm option to SystemJvmOptions
Adding back accidently removed jvm options that is required to enfoce
start of the week = Monday in IsoCalendarDataProvider.